app/assets/stylesheets/hrwa.css
/* ... */
#primary h1 {margin-bottom:20px;}
#site_footer { margin-top:2em; border-top:1px solid #eee; padding-top:10px;}
#site_footer #culcul { padding-left:28px; background:#fff url('crown-small-blue.png') no-repeat 0 2px; line-height:28px; font-size:11px; }
#search_results article .documentHeader h5 {overflow:hidden;}
#search_results article {overflow:hidden;}
#search_results article dl {background:#fff;}
#search_results article:nth-child(odd) dl { background-color: #fafafe; }
#search_results article dl { margin-bottom:0.25em; margin-top:0.25em; }
#search_results article dl, #secondary ul, #secondary dl { padding:4px; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px; border:1px solid #dde; }
#search_results article dl dt { line-height:1.2; font-size:121%; }
#search_results article dl dt span.dtcount { display:inline-block; line-height:1.5; color:rgba(0,0,0,0.3); font-weight:normal; float:left; margin-left:-28px; font-size:90%; }
#search_results article dl dd { margin-left:3px;margin-right:3px; }
#search_results article.find-site-result .index_title {margin-bottom:5px;}
#search_results article .hl_snippet {display:block;font-size:11px;line-height:14px;overflow:hidden;padding-bottom:1px;}
#search_results article.find-site-result .hl_snippet {margin-bottom:8px;}
#search_results article.archive-result .hl_snippet {margin-bottom:1px;}
/* #search_results article.archive-result .hl_snippet:hover {max-height:inherit !important;background-color:#feffaa;border-radius:5px;} */
#search_results article dl dd.result_url {font-size:110%;color:#999/*#009129*/;word-break:break-word;}
#search_results article dl dd .toggler {display:block;margin:0.2em 0 0.1em 0; }
#search_results article dl dd.result_aka {margin-top:1px;font-size:12px;font-style:italic;}
#search_results article .caption p { line-height:1.3em; }
#search_results article code { color:#444; background-color:#FEE9CC; font-size:.9em; padding:0; }
#search_results article .caption h5.index_title, #documents li.span3 article h5.index_title { white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis; }
#search_results article a.thumbnail { position:relative; }
#search_results article a.thumbnail i { position:absolute; top:2px; right:2px; }
/*#documents li.span3 article { height:440px; overflow:auto; }*/
#primary div.pageEntriesInfo { margin:1px 0 0 0; font-size:110%; }
#appliedParams {margin-top:10px}
#primary #search_constraints {margin-bottom:5px;}
#primary #qtime_ms {font-style:italic;font-size:13px;}
#primary div.pagination { margin:0 10px 0 20px; height:auto; display:block; font-size:0.85em; }
#primary .blacklight-photographs h3 { clear:both; }
input[type=checkbox].toggle_folder { float:left; margin-right:3px; }
label.toggle_folder { color:#999; }
.nav-tabs li a { text-transform:lowercase;font-variant:small-caps; font-size:110%; }
.nav-tabs li a:hover { border-color:#888; }
.nav-tabs, .nav-tabs li a:hover { border-bottom:1px solid #888; }
.nav-tabs li.active a, .nav-tabs li.active a:hover { background-color:#fff; background-color:rgba(255,255,255,0.25); border-color:#888; border-bottom-color:#fff; }
#home_gallery_see_more_btn {margin-bottom:15px;margin-right:10px;}
#home-tab-content .tab-pane { /*max-height:480px; overflow:auto;*/ border:1px solid #888; border-top:0;padding-top:5px; }
ul.tabs { margin-bottom:0; padding-left:10px;}
ul.tabs li a {color:#888;}
#home-tab-content { background-color:#fff; background-color:rgba(255,255,255,0.25); }
#home-tab-content .results_control { border:1px solid #888; border-top:0; border-bottom:1px dotted #E6DECF; padding:2px 4px; }
#home-tab-content .results_control > a { margin-right:2px; }
#home-tab-content .tab-pane ul:not(.no-cols) { /*-webkit-column-count:2;-moz-column-count:2;column-count:2;*/ list-style:none; margin-left:0.2em; padding:10px 2px; word-wrap:break-word;} /* max-width is a hack for long urls in URL tab. must find better solution */
#home-tab-content .results_control .btn-group { margin-left:2px; }
#home-tab-content .results_control .btn-group i { margin-top:-1px; }
#home-tab-content .tab-pane ul.dropdown-menu { -webkit-column-count:1;-moz-column-count:1;column-count:1;text-align:left; }
#home-tab-content .tab-pane ul.dropdown-menu li a { cursor:pointer; }
#home-tab-content .tab-pane ul li { display:block; line-height:1em; margin-bottom:4px; padding-bottom:2px; padding-top:2px;}
#home-tab-content .tab-pane > ul.zebra li:nth-child(even) { background:#E6DECF; }
#home-tab-content .tab-description {padding:8px 0px 6px 3px;line-height:16px;}
#col_control {margin-top:2px;}
.cols-one {-moz-column-count:1; -webkit-column-count:1; column-count:1;}
.cols-two {-moz-column-count:2; -webkit-column-count:2; column-count:2;}
.cols-three {-moz-column-count:3; -webkit-column-count:3; column-count:3;}
.tab-thumbnails { margin-left:0; }
.tab-thumbnails div.thumbnail { min-height:230px; }
.tab-thumbnails div.thumbnail, ul.thumbnails article.thumbnail, #t2 .tab-thumbnails a.thumbnail { width:95%; padding:2px; background-color:#fff; background-color:rgba(255,255,255,0.5); }
#t2 .tab-thumbnails a.thumbnail { min-height:auto; }
.tab-thumbnails div.thumbnail:hover, ul.thumbnails article.thumbnail:hover { background-color:#fff; }
.tab-thumbnails p { font-size:11px; line-height:12px; }
.tab-thumbnails > li { margin-left:11px; }
.tab-thumbnails a.thumbnail { padding:2px; }
.tab-thumbnails a.thumbnail { height:134px; overflow:hidden; }
.tab-thumbnails a.thumbnail img { max-height:134px; }
#t1 .tab-thumbnails a.thumbnail img { }
#secondary .sb_widget ul, #secondary dl.defList, #secondary ul.tools { background:#fff; background-color:rgba(255,255,255,0.5); margin:.5em 0 .5em 0; list-style:none; border-style:dotted; font-size:95%; }
#secondary .sb_widget ul:hover, dl.defList:hover, #secondary ul.tools:hover { background:#fff!important; }
#secondary h6 { line-height:1.5em; }
#secondary h6 { margin-top:1em; }
/* ... */

